--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8bb1">  <td>19/07/10 21:16:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="windowtab.dynamictab()[pri:0, instance:list_Concepts1.windowtab@604ed9f0]">dynamictab</td> 
-  <td>main@504527234</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>19/08/17 12:35:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.SetUp()[pri:0, instance:com.zohocrm.qa.testcases.LoginPageTest@1794d431]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
 </table>
